<resources>
    <string name="app_name">Maishapay</string>
    <string name="text_accounts">All Accounts</string>
    <string name="hint_name">Name</string>
    <string name="hint_telephone">Téléphone</string>
    <string name="hint_password">Code pin</string>
    <string name="hint_confirm_password">Confirm Password</string>
    <string name="text_connexion">Connexion</string>
    <string name="text_register">Register</string>
    <string name="error_message_name">Enter Full Name</string>
    <string name="error_message_email">Enter Valid Email</string>
    <string name="error_message_age">Enter Age</string>
    <string name="error_message_password">Enter Password</string>
    <string name="success_message">Registration Successful</string>
    <string name="text_forgot_code_pin"><u>Code pin oublié? Cliquez ici.</u></string>
    <string name="text_already_member">Already a member? Login</string>
    <string name="error_email_exists">Email Already Exists</string>
    <string name="error_password_match">Password Does Not Matches</string>
    <string name="error_valid_email_password">Wrong Email or Password</string>
    <string name="action_settings">Settings</string>
    <string name="text_hello">Hello,</string>
    <string name="text_title">Android Tutorials Hub</string>
    <string name="e_mail">E-mail</string>
    <string name="sommettre">Soumettre</string>
    <string name="msg_phone_require">Le champs téléphone est obligatoire</string>
    <string name="msg_email_require">Le champs e-mail est obligatoire</string>
    <string name="reessayer">Réessayer</string>
    <string name="annuler">Annuler</string>
    <string name="msg_pin_perdu_success">Vous avez reçu un mail avec votre code PIN</string>
    <string name="parametres">Paramètres</string>
    <string name="msg_network_error">Impossible de se connecter au serveur, veuillez réessayer plutard.</string>
    <string name="msg_pin_perdu_error_0">Les données que vous avez saisies ne sont pas correctes</string>
    <string name="msg_pin_perdu_error_2">Echec d\'envoie E-mail, veuillez reessayer</string>
    <string name="veuillez_patienter">Veuillez patienter…</string>
    <string name="msg_login_error">Les informations entrées ne sont pas correctes, verifiez votre code PIN</string>
    <string name="ask_that_you"><b>Maishapay</b> demande si tu :</string>
    <string name="annuler_2"><u>Annuler</u></string>
    <string name="accepter">Accepter</string>
    <string name="approuves">• Approuves les paiements qui se seront effectués sur <u>ton compte Maishapay</u></string>
    <string name="maishapay_prot_ge_tes_informations_financi_res">Maishapay ne divulguéra en aucun cas tes informations.</string>
    <string name="commande">Ta commande</string>
    <string name="description">Description</string>
</resources>
