<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:scrollbars="none"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <include
            android:id="@+id/toolbar"
            layout="@layout/appbar" />

        <RelativeLayout
            xmlns:tools="http://schemas.android.com/tools"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:context=".MaishapayLoginActivity">

            <android.support.v7.widget.LinearLayoutCompat
                android:id="@+id/linearLayoutCompat"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:paddingBottom="10dp"
                android:paddingLeft="20dp"
                android:paddingRight="20dp"
                android:paddingTop="20dp"
                android:orientation="vertical"
                android:layout_centerHorizontal="true">

                <android.support.v7.widget.AppCompatTextView
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/ask_that_you"
                    android:layout_marginBottom="20dp"
                    android:textSize="18sp"/>

                <android.support.v7.widget.AppCompatTextView
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/approuves"
                    android:textSize="18sp"
                    android:layout_marginBottom="50dp"/>

                <android.support.v7.widget.AppCompatTextView
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/maishapay_prot_ge_tes_informations_financi_res"
                    android:textSize="11sp"
                    android:gravity="center"
                    android:layout_marginBottom="10dp"/>

                <android.support.v7.widget.AppCompatButton
                    android:id="@+id/appCompatButtonAccepter"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/bg_confirm_selector"
                    android:text="@string/accepter"
                    android:textAllCaps="false"
                    android:textColor="@android:color/white"
                    android:visibility="visible" />
            </android.support.v7.widget.LinearLayoutCompat>
        </RelativeLayout>

        <android.support.v7.widget.AppCompatImageView
            android:layout_width="200dp"
            android:layout_height="80dp"
            android:layout_gravity="center_horizontal"
            android:scaleType="centerInside"
            android:src="@drawable/fastpay3"/>
    </LinearLayout>
</ScrollView>
