<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/root"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:fitsSystemWindows="false"
    android:orientation="vertical"
    tools:ignore="MissingPrefix">

    <include
        android:id="@+id/toolbar"
        layout="@layout/appbar" />

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:scrollbars="none">

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="0.0dip"
                android:layout_marginLeft="@dimen/activity_horizontal_margin"
                android:layout_marginRight="@dimen/activity_horizontal_margin"
                android:layout_weight="1.0"
                android:gravity="center"
                android:orientation="vertical"
                android:paddingBottom="10.0dip">

                <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10.0dip"
                    android:layout_marginRight="10.0dip"
                    android:layout_marginTop="140dip"
                    android:orientation="vertical">

                    <android.support.design.widget.TextInputLayout
                        android:id="@+id/ti_telephone"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="5.0dip"
                        android:layout_marginRight="5dip"
                        android:focusable="true"
                        android:focusableInTouchMode="true"
                        android:orientation="horizontal">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal">

                            <com.hbb20.CountryCodePicker
                                android:id="@+id/ET_CodePicker"
                                android:layout_width="70dp"
                                android:layout_height="wrap_content"
                                android:textSize="14sp"
                                app:ccpDialog_textColor="@color/green_dark"
                                app:ccp_areaCodeDetectedCountry="true"
                                app:ccp_autoDetectLanguage="true"
                                app:ccp_contentColor="@color/green_dark"
                                app:ccp_countryAutoDetectionPref="LOCALE_SIM"
                                app:ccp_defaultNameCode="cd"
                                app:ccp_rememberLastSelection="true"
                                app:ccp_showArrow="false"
                                app:ccp_showFlag="false"
                                app:ccp_showNameCode="false" />

                            <com.santalu.widget.MaskEditText
                                android:id="@+id/ET_Telephone"
                                android:layout_width="fill_parent"
                                android:layout_height="wrap_content"
                                android:hint="@string/hint_telephone"
                                android:inputType="phone"
                                android:textSize="16.0sp"
                                app:met_mask="## #### ###" />

                        </LinearLayout>
                    </android.support.design.widget.TextInputLayout>

                    <android.support.design.widget.TextInputLayout
                        android:id="@+id/ti_code_pin"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="5.0dip"
                        android:layout_marginRight="5dip"
                        android:layout_marginTop="10.0dip"
                        android:focusable="true"
                        android:focusableInTouchMode="true">

                        <EditText
                            android:id="@+id/ET_Code_Pin"
                            android:layout_width="fill_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/hint_password"
                            android:imeOptions="actionDone"
                            android:inputType="numberPassword"
                            android:maxLength="5"
                            android:textSize="16.0sp" />
                    </android.support.design.widget.TextInputLayout>

                    <Button
                        android:id="@+id/BTN_ForgotCodePin"
                        style="@style/flat_button"
                        fontpath="Roboto-Regular.ttf"
                        android:layout_width="fill_parent"
                        android:layout_height="20.0dip"
                        android:layout_marginLeft="10.0dip"
                        android:layout_marginRight="5.0dip"
                        android:layout_marginTop="10dp"
                        android:gravity="end|center"
                        android:paddingLeft="5.0dip"
                        android:text="J'ai perdu mon code pin"
                        android:textAllCaps="false"
                        android:textColor="@color/green_dark"
                        android:textSize="12.0sp" />

                    <android.support.v7.widget.AppCompatButton
                        android:id="@+id/appCompatButtonAccepter"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@color/bg_confirm_selector"
                        android:text="@string/accepter"
                        android:textAllCaps="false"
                        android:layout_marginTop="10dp"
                        android:textColor="@android:color/white"
                        android:visibility="visible" />
                </LinearLayout>
            </LinearLayout>

            <ImageView
                android:layout_width="200dp"
                android:layout_height="80dp"
                android:layout_gravity="center"
                android:layout_marginBottom="30dp"
                android:src="@drawable/mpay_icon" />
        </LinearLayout>
    </ScrollView>
</LinearLayout>